--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,20 @@
 	width: 100vw;
 	width: 100vh;
 }
+
+.modal-content {
+	widht: 80%;
+	margin: 0 auto;
+}
+
+.modal-content > h1 {
+	background-color: green;
+	color: white;
+	padding: 20px;
+}
+
+.modal-body{
+	padding: 10px 20px;
+	display: flex;
+	justify-content: space-between;
+}
